--- a/vite-react-leads/src/components/TableLeads.css
+++ b/vite-react-leads/src/components/TableLeads.css
@@ -24,13 +24,24 @@ table th:last-child {
 }
 
 table td {
-    border-bottom: 5px solid #afafaf;
+    border-bottom: 1px solid #afafaf;
 }
 
 table td:first-child {
     padding-left: 20px;
 }
 
-table tr:last-child {
-    border-bottom: 6px solid #61dafb;
+table tr:last-child td {
+    border-bottom: 2px solid #61dafb;
+}
+
+table button {
+    border: none;
+    background-color: #ff9c9c;
+    border-radius: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 8px;
+    padding: 5px;
+    cursor: pointer;
 }
